[package]
name = "english_matching"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
bb8 = "0.8"
diesel = "2.1"
diesel-async = { version = "0.4", features = ["postgres", "bb8"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.37", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }